2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/LayoutManager.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/LayoutManager2.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/CardLayout.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BorderLayout.java:
	removed, so to use classath

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	implemented findComponentAt

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* javalib/awt-implementations/kaffe/java/awt/AWTEvent.java,
	javalib/awt-implementations/kaffe/java/awt/Defaults.java:
	implemented a compliant setSource() in AWTEvent.

2006-04-25  Riccardo Mottola <riccardo@kaffe.org>

	* awt-implementations/kaffe/java/awt/event/HierarchyBoundsAdapter.java,
	awt-implementations/kaffe/java/awt/event/HierarchyBoundsListener.java,
	awt-implementations/kaffe/java/awt/event/HierarchyEvent.java
	awt-implementations/kaffe/java/awt/event/HierarchyListener.java:
	removed, so to use classath

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* awt-implementations/kaffe/java/awt/ActionEvt.java,
	awt-implementations/kaffe/java/awt/MouseEvt.java,
	awt-implementations/kaffe/java/awt/event/ActionEvent.java:
	improved mouse pressed and released events.
	
2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/MouseEvt.java:
	removed package-protected field "button" so that the MouseEvent field is used.

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/AttributeValue.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BufferCapabilities.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Transparency.java:
	removed so classpath versions are used.

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>
